tests/e2e/scenarios/negative/runtime_divide_by_zero.ks
// Expected phase: runtime — uncaught DivideByZero (emit → VM; aligns with overflow/divzero unit tests).

1 / 0
